fix spacing on small screens

--- a/styles/contact_styles.css
+++ b/styles/contact_styles.css
@@ -4,33 +4,31 @@ html {
   scroll-behavior: smooth;
 }
 
-@media (max-width: 90em) {
-  html {
-    font-size: 55%;
-  }
-}
-
-@media (max-width: 80em) {
-  html {
-    font-size: 50%;
-  }
-}
-
 @media (max-width: 75em) {
   html {
-    font-size: 50%;
+    font-size: 60%;
+  }
+  h2 {
+    margin-top: 2.2em;
+    margin-bottom: auto;
+  }
+  footer {
+    margin-top: 5em;
+  }
+  p {
+    margin-bottom: auto;
   }
 }
 
 @media (max-width: 70em) {
   html {
-    font-size: 45%;
+    font-size: 55%;
   }
 }
 
 @media (max-width: 65em) {
   html {
-    font-size: 45%;
+    font-size: 50%;
   }
 }
 
