--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,36 +4,18 @@ html {
   scroll-behavior: smooth;
 }
 
-@media (max-width: 90em) {
-  html {
-    font-size: 55%;
-  }
-  h1 {
-    padding-top: 1.5em;
-  }
-}
-
-@media (max-width: 80em) {
-  html {
-    font-size: 55%;
-  }
-  h1 {
-    padding-top: 1.5em;
-  }
-}
-
 @media (max-width: 75em) {
   html {
     font-size: 60%;
+  }
+  h1 {
+    margin-top: 2.3em;
   }
 }
 
 @media (max-width: 70em) {
   html {
     font-size: 55%;
-  }
-  h1 {
-    padding-top: 1.5em;
   }
 }
 
